[gd_scene load_steps=3 format=3 uid="uid://bc343nmadfwd5"]

[ext_resource type="Script" uid="uid://c302pf7vi3ll3" path="res://scripts/uiController.gd" id="1_lojgo"]
[ext_resource type="Texture2D" uid="uid://cg2qnh6h001o3" path="res://assets/icon.svg" id="2_a0ohu"]

[node name="Control" type="Control"]
z_index = 5
layout_mode = 3
anchors_preset = 0
offset_left = -134.0
offset_top = -73.0
offset_right = 134.0
offset_bottom = 73.0
script = ExtResource("1_lojgo")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="interaction_pannel" type="Panel" parent="CanvasLayer"]
offset_left = 628.0
offset_top = 388.0
offset_right = 676.0
offset_bottom = 410.0
scale = Vector2(1.76, 1.76)

[node name="pressE" type="Label" parent="CanvasLayer/interaction_pannel"]
layout_mode = 0
offset_left = 3.33333
offset_top = 5.00001
offset_right = 66.3333
offset_bottom = 28.0
scale = Vector2(0.639999, 0.559999)
theme_override_font_sizes/font_size = 16
text = "Press 'E'"

[node name="main_pannel" type="Panel" parent="CanvasLayer"]
offset_left = 929.0
offset_top = 79.0
offset_right = 1000.0
offset_bottom = 112.0
scale = Vector2(2.28, 2.28)

[node name="manaLabel" type="Label" parent="CanvasLayer/main_pannel"]
layout_mode = 0
offset_left = 7.0
offset_top = 3.0
offset_right = 83.0
offset_bottom = 26.0
scale = Vector2(0.639999, 0.559999)
text = "MANA: 10"

[node name="healthLabel" type="Label" parent="CanvasLayer/main_pannel"]
layout_mode = 0
offset_left = 7.0
offset_top = 16.0
offset_right = 65.0
offset_bottom = 39.0
scale = Vector2(0.639999, 0.559999)
text = "HP: 5"

[node name="level_pannel" type="Panel" parent="CanvasLayer"]
offset_left = 882.0
offset_top = 498.0
offset_right = 975.0
offset_bottom = 531.0
scale = Vector2(2.35364, 2.35364)

[node name="xpLabel" type="Label" parent="CanvasLayer/level_pannel"]
layout_mode = 0
offset_left = 7.0
offset_top = 16.0
offset_right = 65.0
offset_bottom = 39.0
scale = Vector2(0.639999, 0.559999)
theme_override_font_sizes/font_size = 16
text = "XP: 0"

[node name="levelLabel" type="Label" parent="CanvasLayer/level_pannel"]
layout_mode = 0
offset_left = 6.0
offset_top = 3.0
offset_right = 81.0
offset_bottom = 26.0
scale = Vector2(0.639999, 0.559999)
theme_override_font_sizes/font_size = 16
text = "Level: 0"

[node name="talkBox" type="Panel" parent="CanvasLayer"]
offset_left = 197.0
offset_top = 452.0
offset_right = 861.0
offset_bottom = 627.0

[node name="Label2" type="Label" parent="CanvasLayer/talkBox"]
layout_mode = 0
offset_left = 107.0
offset_top = 13.0
offset_right = 616.0
offset_bottom = 40.0
text = "John Gnome:"

[node name="Label" type="Label" parent="CanvasLayer/talkBox"]
layout_mode = 0
offset_left = 105.0
offset_top = 48.0
offset_right = 655.0
offset_bottom = 166.0
theme_override_font_sizes/font_size = 19
text = "test"

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/talkBox"]
visible = false
position = Vector2(53, 89.5)
scale = Vector2(0.6875, 1.14844)
texture = ExtResource("2_a0ohu")
